[tool.poetry]
name = "pydrought"
version = "0.2.1"
description = "Python common modules for EDO, GDO & ICPAC drought data management"
authors = ["jaysnm <jaysnmury@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.13,>=3.9"
cx-oracle = "7.3.0"
pysftp = "0.2.9"
numpy = "^1.26.0"
cryptography = "^41.0.4"
PyYAML = "^6.0.1"
zipfile2 = "0.0.12"
netCDF4 = "^1.6.2"
xarray = "^2023.9.0"
rioxarray = "^0.15.0"
Pillow = "^9.4.0"
pydantic = {extras = ["dotenv"], version = "^1.10.4"}
SQLAlchemy = "^1.4.46"
pangres = "^4.1.2"
psycopg2-binary = "^2.9.9"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.292"
black = "^23.9.1"
mypy = "^1.5.1"
ipython = "^8.8.0"
jupyterlab = "^3.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
